@@ -10,7 +10,10 @@
  *  to the next version released. It does not indicate all new additions to the library in each version change, only
  *  areas relevant to making older projects compatible with the API changes of each new release.
  *
- * \section Sec_MigrationXXXXXX Migrating from 090401 to XXXXXX
+ * \section Sec_MigrationXXXXXX Migrating from 090510 to XXXXXX
+ *
+ *
+ * \section Sec_Migration090510 Migrating from 090401 to 090510
  *
  *  <b>All</b>
  *    - The ButtLoadTag.h header has been removed, as it was never used for its intended purpose. Projects should either remove all
